--- a/games/styles-gamepage.css
+++ b/games/styles-gamepage.css
@@ -27,7 +27,7 @@
         border-radius: 20px;
         box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
         max-width: 700px;
-        width: 150%;
+        width: 200px;
         border: 2px solid #00cc44;
       }
 
