--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
         max-width: 700px;
         width: 90%;
         border: 2px solid #00cc44;
+        Height: 125%
       }
 
        .tit {
