--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ button:hover {
   box-shadow: 0 6px 20px rgba(0, 204, 68, 0.6);
 }
 
-.ad {
+.67 {
   color: #ffffff;
   margin-top: 30px;
   font-size: 14px;
