--- a/Danger/game-danger-styles.css
+++ b/Danger/game-danger-styles.css
@@ -20,6 +20,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        color: #ffffff;
       }
 
       .container {
@@ -44,10 +45,13 @@
              .ti {
         font-size: 37px;
         color: #ffffff;
-        margin-bottom: 35px;
+        margin-bottom: 0px;
         font-weight: 10;
         letter-spacing: 0px;
       }
+        p {
+            margin-bottom: 10px;
+        }
 
 
       .nav-buttons {
